--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'foundation';
 $text-shadow: 1px 0 0 #000, -1px 0 0 #000, 0 1px 0 #000, 0 -1px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 $box-shadow: 1px 1px 1px 1px #22252B;
+$order-color: rgba(176, 176, 176, .5);
 
 ul
  {
@@ -118,24 +119,28 @@ li
 .supersticky
  {
    position: fixed;
+   float: right;
    top: 0;
    right: 10px;
-   width: 275px;
+
+
  }
 
 .order-menu
  {
   @include span-columns(2);
-
+background-color: $order-color;
    border: 1px solid black;
-   width: 270px;
+   width: 100%;
+
 
  }
 
 .order-title
  {
    text-align: center;
-   border-bottom: 1px dashed black;
+   
+   box-shadow: none;
  }
 
 .order-delete
