--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -126,17 +126,23 @@ li
 .supersticky
  {
    position: fixed;
-   float: right;
+  //  float: right;
+  
    top: 0;
+   bottom: 0;
    right: 20px;
 
 
  }
 
-.order-menu
- {
+ .order
+{
+  // position: relative;
   @include span-columns(2);
   @include shift(1);
+}
+.order-menu
+ {
 background-color: $order-color;
    border: 1px solid black;
    width: 100%;
