style changes. downloaded a fix for the order menu

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,7 +29,7 @@ li
 .header
  {
    position: relative;
-   background: url('../../public/assets/images/banner2.jpeg') no-repeat center center fixed;
+   background: url('../../public/assets/images/banner.3.jpg') no-repeat center center fixed;
    background-size: cover;
    height: 635px;
  }
@@ -45,6 +45,7 @@ li
  {
     text-align: center;
     font-family: 'Josefin Slab';
+    color: white;
 }
 
 .links,
